# Jen.js

./: .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  DEVELOPER.md  EXAMPLE_WORKING.txt  README.md  TESTING.md  build.js  build.ts  bundle.js  eslint.config.ts  jen.config.ts  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preact.js  server.ts  tsconfig.json  turbo.json  vercel.json  vitest.config.ts
.github/: pull_request_template.md
archive/: 15-release-notes.md  README.md
bench/: build.bench.ts  compare.js  config.bench.ts  middleware.bench.ts  regression.js  routing.bench.ts  ssr.bench.ts  verify.js
docs/: data.js  main.js
example/: GETTING_STARTED.md  README.md
jenpack/: Cargo.toml  README.md
jenpack/examples/basic/: README.md  jenpack.config.toml
jenpack/examples/basic/src/: index.html  main.ts  styles.scss  utils.ts
jenpack/examples/preact-app/: jenpack.config.ts
jenpack/examples/preact-app/src/: App.tsx  Counter.tsx  index.tsx
jenpack/scripts/: create-bin.js
jenpack/src/: bundler.rs  cli.rs  config.rs  config.ts  html.rs  index.ts  lib.rs  main.rs  minifier.rs  sass.rs  transform.rs  types.ts  utils.rs  watcher.rs
jenpack/src/cache/: index.ts
jenpack/src/cli/: index.ts
jenpack/src/cli/commands/: analyze.ts  build.ts  clean.ts  dev.ts
jenpack/src/core/: bundler.ts  graph.ts
jenpack/src/resolver/: index.ts
jenpack/src/server/: dev-server.ts  watcher.ts
jenpack/src/swc/: transform.ts
jenpack/src/utils/: hash.ts  log.ts  path.ts
preactsc/: README.md  build.js  package-lock.json  (+2 more)
(+398 files in other folders)
