[package]
name = "jenpack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
walkdir = "2.4"
notify = "6.1"
colored = "2.1"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.7"
bytes = "1.5"
indexmap = "2.1"
glob = "0.3"
path-slash = "0.1"
sha2 = "0.10"
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "jenpack"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
